[package]
name = "benchmark_analysis_yomikae"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.29", features = ["derive"] }
serde_json = "1.0.89"
tokio = { version = "1.22.0", features = ["full"] }
tokio-stream = "0.1.11"
analysis_yomikae = { git = "https://github.com/japanese-law-analysis/analysis_yomikae" }
search_article_with_word = { git = "https://github.com/japanese-law-analysis/search_article_with_word" }
serde = { version = "1.0.148", features = ["derive"] }
